kubernetes/2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: default
  labels:
    app: game-2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
        - name: game-2048
          image: your-docker-image:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: game-2048
  namespace: default
spec:
  selector:
    app: game-2048
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
